fixed the update method for users
