# src/controllers/user.controller.ts
@@ -1,15 +1,14 @@
 import {
   Body,
   Controller,
-  Get,
   Path,
   Post,
   Put,
   Delete,
   Route,
   SuccessResponse,
-  Res,
-  TsoaResponse,
+  Query,
+  Get,
 } from 'tsoa';
 import { User } from '@prisma/client';
 import { UserRepository } from '../repositories/user.repository';
@@ -19,16 +18,11 @@ const userRepository = new UserRepository();
 
 @Route('users')
 export class UsersController extends Controller {
-  @Get('{userEmail}')
-  public async getUserByEmail(
-    @Path() userEmail: string,
-    @Res() notFoundResponse: TsoaResponse<400, { reason: string }>,
-  ): Promise<User | null> {
-    var res = await userRepository.getByEmail(userEmail);
-    if (res === null) {
-      return notFoundResponse(400, { reason: `no user was found with the mail of ${userEmail}` });
-    }
-    return res;
+  @Get()
+  public async getUser(@Query() id?: string, @Query() email?: string): Promise<User | null> {
+    if (id) return userRepository.getById(id);
+    if (email) return userRepository.getByEmail(email);
+    return null;
   }
 
   /**
@@ -41,13 +35,13 @@ export class UsersController extends Controller {
     return await userRepository.create(requestBody);
   }
 
-  @Put('{userId}')
-  public async updateUser(@Path() userId: string, @Body() requestBody: Partial<publicUser>) {
-    return await userRepository.update(userId, requestBody);
+  @Put('{userEmail}')
+  public async updateUser(@Path() userEmail: string, @Body() requestBody: Partial<publicUser>) {
+    return await userRepository.update(userEmail, requestBody);
   }
 
-  @Delete('{userId}')
-  public async deleteUser(@Path() userId: string) {
-    return await userRepository.delete(userId);
+  @Delete('{userEmail}')
+  public async deleteUser(@Path() userEmail: string) {
+    return await userRepository.delete(userEmail);
   }
 }
